--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  transition: all 0.3s;
 }
 
 :root {
@@ -38,7 +39,7 @@
 }
 
 body {
-  background: linear-gradient(to bottom, var(--color-primary), var(--color-secondary));
+  background: var(--color-primary);
   font-family: "Comfortaa", cursive;
   font-size: 1.1rem;
   color: var(--color-white);
@@ -57,6 +58,7 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   background-color: var(--color-secondary);
   outline: 1px solid slategrey;
+  border-radius: 10000px;
 }
 
 a {
@@ -86,7 +88,7 @@ section {
   display: none;
   transform: translateY(-100%) scale(0);
   transition: all 0.4s ease-in-out;
-  background: linear-gradient(to bottom, var(--color-secondary), var(--color-primary));
+  background: var(--color-primary);
 }
 
 .active {
@@ -166,7 +168,7 @@ section {
           animation: bounce-in-right 1.2s ease-in-out;
   padding: 1rem;
   cursor: pointer;
-  background-color: var(--color-grey-4);
+  background-color: var(--color-primary);
   width: 55px;
   height: 55px;
   border-radius: 50%;
@@ -174,7 +176,7 @@ section {
   justify-content: center;
   align-items: center;
   margin: 0.7rem 0;
-  box-shadow: var(--box-shadow-1);
+  box-shadow: 5px -3px 5px #0c0c0c, -3px 5px 5px #262626;
 }
 .controls .control i {
   font-size: 1.2rem;
@@ -197,13 +199,13 @@ section {
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  background-color: var(--color-grey-4);
+  background-color: var(--color-primary);
   cursor: pointer;
   position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 6px -6px 15px #0b0b0b, -6px 6px 15px #272727;
   transition: all 0.1s ease-in-out;
 }
 .theme-btn:active {
@@ -217,43 +219,74 @@ section {
 
 /*Header-content*/
 .header-content {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  margin: 0;
   min-height: 100vh;
 }
 .header-content .left-header {
   display: flex;
   align-items: center;
+  justify-content: center;
   position: relative;
-}
-.header-content .left-header:hover {
-  transition: all 0.5s ease;
-  filter: drop-shadow(16px 16px 30px var(--color-white));
+  padding: 1px;
+  margin: 2px;
+  width: 30vh;
+  height: 30vh;
+  top: -230px;
+  left: 260px;
 }
 .header-content .left-header .h-shape {
   transition: all 0.4s ease-in-out;
   width: 85%;
   height: 100%;
-  background-color: var(--color-secondary);
   position: absolute;
   left: 0;
   top: 0;
   z-index: -1;
-  -webkit-clip-path: polygon(40% 0, 56% 80%, 39% 40%, 0% 100%);
-          clip-path: polygon(40% 0, 56% 80%, 39% 40%, 0% 100%);
+  -webkit-clip-path: polygon(80% 50%, 56% 80%, 39% 40%, 50% 100%);
+          clip-path: polygon(80% 50%, 56% 80%, 39% 40%, 50% 100%);
 }
 .header-content .left-header .image {
-  border-radius: 1000000000px;
-  position: absolute;
-  height: 65%;
-  width: 65%;
-  margin-left: 4rem;
+  border-radius: 40px;
+  position: relative;
+  height: 30vh;
+  width: 30vh;
   background-color: var(--color-black);
-  transition: all 0.5s ease-in-out;
+  transition: all 1s ease-in-out;
   transition: transform 1s;
+  -webkit-animation: roll-in-blurred-left 1.2s cubic-bezier(0.23, 1, 0.32, 1) 0.7s both;
+  animation: roll-in-blurred-left 1.2s cubic-bezier(0.23, 1, 0.32, 1) 0.7s both;
+}
+@-webkit-keyframes roll-in-blurred-left {
+  0% {
+    transform: translateX(-1000px) rotate(-720deg);
+    filter: blur(50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0) rotate(0deg);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+@keyframes roll-in-blurred-left {
+  0% {
+    transform: translateX(-1000px) rotate(-720deg);
+    filter: blur(50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0) rotate(0deg);
+    filter: blur(0);
+    opacity: 1;
+  }
 }
 .header-content .left-header .image img {
-  border-radius: 1000000000px;
+  border-radius: 40px;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -261,8 +294,9 @@ section {
   transition: all 0.9s ease-in-out;
 }
 .header-content .left-header .image img:hover {
+  border: 1px solid var(--color-secondary);
   transition: all 0.8s ease;
-  filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
+  filter: drop-shadow(-3px -3px 5px var(--color-secondary));
 }
 .header-content .left-header .cursor {
   position: relative;
@@ -275,18 +309,33 @@ section {
 }
 
 .right-header {
+  padding: 0;
   display: flex;
+  width: 110vh;
+  height: 60vh;
   flex-direction: column;
+  align-content: center;
   justify-content: center;
-  padding-right: 18rem;
+  padding: 5rem;
+  margin: 7vh;
+  border-radius: 70px;
+  background: linear-gradient(45deg, #1b1b1b, #171717);
+  box-shadow: 8px 8px 16px #0c0c0c, -8px -8px 16px #272727;
 }
 .right-header .name {
+  text-align: center;
   font-size: 3rem;
 }
 .right-header .name span {
   color: var(--color-secondary);
 }
+.right-header .headline {
+  text-align: center;
+}
 .right-header p {
+  padding: 20px;
+  text-align: center;
+  font-size: calc(2px + 1rem);
   margin: 1.5rem 0;
   line-height: 2rem;
 }
@@ -304,16 +353,16 @@ section {
   grid-gap: 2rem;
 }
 .about-container .right-about .about-item {
-  border: 1px solid var(--color-grey-2);
+  border: 1px solid var(--color-primary);
   border-radius: 25px;
   transition: all 0.4s ease-in-out;
-  box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px -10px 20px #0b0b0b, -10px 10px 20px #272727;
 }
 .about-container .right-about .about-item:hover {
   cursor: default;
   transform: translateY(-5px);
   border: 1px solid var(--color-secondary);
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+  box-shadow: 12px -12px 24px #0c0c0c, -12px 12px 24px #272727;
 }
 .about-container .right-about .about-item .abt-text {
   padding: 1.5rem;
@@ -490,28 +539,34 @@ section {
 .portfolios {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 2rem;
+  gap: 2rem;
+  justify-self: center;
+  justify-content: center;
   margin-top: 3rem;
+  border: 3px solid var(--color-primary);
 }
 .portfolios .portfolio-item {
+  width: 30vh;
+  height: 40vh;
   position: relative;
-  border-radius: 15px;
+  border-radius: 45px;
+  box-shadow: 6px -6px 15px #0b0b0b, -6px 6px 15px #272727;
 }
 .portfolios .portfolio-item img {
-  width: 100%;
-  height: 300px;
+  width: 30vh;
+  height: 40vh;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 15px;
+  border-radius: 45px;
 }
 .portfolios .portfolio-item .hover-items {
-  width: 100%;
-  height: 100%;
+  width: 30vh;
+  height: 40vh;
   background-color: var(--color-secondary);
   position: absolute;
   left: 0;
   top: 0;
-  border-radius: 15px;
+  border-radius: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -524,8 +579,18 @@ section {
   font-size: 1.5rem;
   text-align: center;
   justify-content: center;
-  color: var(--color-white);
+  color: var(--color-primary);
   margin-bottom: 1.5rem;
+}
+.portfolios .portfolio-item .hover-items h3:hover {
+  color: var(--color-primary);
+  text-shadow: 8px 8px 16px #0c0c0c, -8px -8px 16px #272727;
+}
+.portfolios .portfolio-item .hover-items .desc-text {
+  color: var(--color-primary);
+  text-align: center;
+  padding: 15px;
+  font-weight: 500;
 }
 .portfolios .portfolio-item .hover-items .icons {
   display: flex;
@@ -731,19 +796,23 @@ section {
 .btn-con {
   display: flex;
   align-self: flex-start;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
   padding-bottom: 5px;
 }
 
 .main-btn {
-  border-radius: 30px;
+  border-radius: 40px;
   color: inherit;
   font-weight: 600;
   position: relative;
-  border: 1px solid var(--color-secondary);
+  border: 1px solid var(--color-primary);
   display: flex;
   align-self: flex-start;
   align-items: center;
   overflow: hidden;
+  box-shadow: 8px 8px 16px #0c0c0c, -8px -8px 16px #272727;
 }
 .main-btn .btn-text {
   padding: 0 2rem;
@@ -766,6 +835,7 @@ section {
   z-index: -1;
 }
 .main-btn:hover {
+  scale: 1.1;
   transition: all 0.4s ease-out;
 }
 .main-btn:hover::before {
@@ -778,7 +848,8 @@ section {
 
 .live-btn {
   left: 10px;
-  border-radius: 30px;
+  margin: 2px;
+  border-radius: 40px;
   color: inherit;
   font-weight: 600;
   position: relative;
@@ -788,6 +859,10 @@ section {
   align-items: center;
   overflow: hidden;
 }
+.live-btn:hover {
+  transition: all 0.8s ease;
+  filter: drop-shadow(1px 2px 5px var(--color-secondary));
+}
 .live-btn .btn-icon {
   background-color: var(--color-secondary);
   display: flex;
@@ -795,6 +870,7 @@ section {
   justify-content: center;
   border-radius: 50%;
   padding: 1rem;
+  margin: 1px;
 }
 
 .main-title {
@@ -819,14 +895,14 @@ section {
   transform: translate(-50%, -50%);
   font-weight: 800;
   font-size: 5.3rem;
-  opacity: 0.2;
+  opacity: 0.01;
 }
 
 .about-container .left-about p {
   padding-left: 0;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 767px) {
   header {
     padding: 0 !important;
   }
@@ -835,22 +911,48 @@ section {
     height: 50px;
   }
   .header-content {
-    grid-template-columns: repeat(1, 1fr);
-    padding-bottom: 6rem;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+  }
+  .left-header {
+    display: none;
+    align-items: center;
+    justify-content: center;
   }
   .left-header .h-shape {
     display: none;
   }
+  .left-header .image {
+    border-radius: 40px;
+    right: 250px;
+    top: 180px;
+    height: 2rem;
+    width: 2rem;
+    margin: 0;
+  }
+  .left-header .image img {
+    height: 2rem;
+    width: 2rem;
+    border-radius: 40px;
+  }
   .right-header {
-    grid-row: 1;
-    padding-right: 0rem !important;
-    width: 90%;
-    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    height: 100%;
+    width: 100%;
+    margin: 0;
   }
   .right-header .name {
     font-size: 2.5rem !important;
     text-align: center;
     padding-top: 3rem;
+  }
+  .right-header p {
+    font-size: 1rem;
   }
   .header-content .left-header .image {
     margin: 0 auto;
@@ -939,10 +1041,58 @@ section {
     font-size: 2.3rem;
   }
   .main-title h2 .bg-text {
+    text-align: center;
     font-size: 2.3rem;
   }
 }
-@media screen and (max-width: 1432px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .container {
+    padding: 7rem 6rem;
+    align-content: center;
+  }
+  .about-container .left-about {
+    padding-right: 0rem;
+  }
+  .left-header .h-shape {
+    display: none;
+  }
+  .left-header .image {
+    top: 50px;
+  }
+  .right-header {
+    padding-right: 0rem !important;
+    width: 90%;
+    margin: 0;
+  }
+  .right-header .name {
+    font-size: 2.5rem !important;
+    text-align: center;
+    padding-top: 3rem;
+  }
+  .about-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .about-container .right-about {
+    padding-top: 2.5rem;
+  }
+  .main-title h2 {
+    font-size: 4rem;
+  }
+  .main-title h2 span {
+    font-size: 4rem;
+  }
+  .main-title h2 .bg-text {
+    font-size: 4.5rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .blogs {
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 6rem;
+  }
+  .portfolios {
+    grid-template-columns: repeat(2, 1fr);
+  }
   .container {
     padding: 7rem 11rem;
   }
@@ -964,95 +1114,6 @@ section {
     margin-bottom: 6rem;
   }
   .main-title h2 .bg-text {
-    font-size: 5.5rem;
-  }
-}
-@media screen and (max-width: 1250px) {
-  .blogs {
-    grid-template-columns: repeat(2, 1fr);
-    margin-top: 6rem;
-  }
-  .portfolios {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .header-content .right-header {
-    padding-right: 9rem;
-  }
-}
-@media screen and (max-width: 660px) {
-  .blogs {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .portfolios {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-@media screen and (max-width: 1070px) {
-  .about-container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .about-container .right-about {
-    padding-top: 2.5rem;
-  }
-  .main-title h2 {
-    font-size: 4rem;
-  }
-  .main-title h2 span {
-    font-size: 4rem;
-  }
-  .main-title h2 .bg-text {
-    font-size: 4.5rem;
-  }
-}
-@media screen and (max-width: 970px) {
-  .container {
-    padding: 7rem 6rem;
-  }
-  .about-container .left-about {
-    padding-right: 0rem;
-  }
-  .header-content {
-    grid-template-columns: repeat(1, 1fr);
-    padding-bottom: 6rem;
-  }
-  .left-header .h-shape {
-    display: none;
-  }
-  .left-header .image {
-    display: none;
-  }
-  .right-header {
-    grid-row: 1;
-    padding-right: 0rem !important;
-    width: 90%;
-    margin: 0 auto;
-  }
-  .right-header .name {
-    font-size: 2.5rem !important;
-    text-align: center;
-    padding-top: 3rem;
-  }
-}
-@media screen and (max-width: 700px) {
-  .container {
-    padding: 7rem 3rem;
-  }
-  .about-stats .progress-bars {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .about-container .right-about {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .timeline {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .main-title h2 {
-    font-size: 3rem;
-  }
-  .main-title h2 span {
-    font-size: 3rem;
-  }
-  .main-title h2 .bg-text {
-    font-size: 4rem;
+    font-size: 7.5rem;
   }
 }/*# sourceMappingURL=styles.css.map */
