--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,8 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  transition: all 0.3s;
 }
-
 
 :root {
   --color-primary: #191919;
@@ -39,12 +39,8 @@
 }
 
 body {
-  
-  background: linear-gradient(
-    to bottom,
-    var(--color-primary),
-    var(--color-secondary));
-  
+  background:
+    var(--color-primary);
   font-family: 'Comfortaa', cursive;
   font-size: 1.1rem;
   color: var(--color-white);
@@ -63,6 +59,7 @@ body::-webkit-scrollbar {
   body::-webkit-scrollbar-thumb {
     background-color: var(--color-secondary);
     outline: 1px solid slategrey;
+    border-radius: 10000px;
   }
 
 a {
@@ -74,9 +71,11 @@ a {
 
 header {
   min-height: 100vh;
+  
   color: var(--color-white);
   overflow: hidden;
   padding: 0 !important;
+
 }
 
 section {
@@ -90,20 +89,19 @@ section {
 
 .container {
   display: none;
+  
   transform: translateY(-100%) scale(0);
   transition: all .4s ease-in-out;
-  background: linear-gradient(
-    to bottom,
-    var(--color-secondary),
-    var(--color-primary));
+  background:  var(--color-primary);
 }
 
 
 .active {
-  display: block;
+  display: block;  
   animation: appear 1.2s ease-in-out;
   transform: translateY(0) scaleY(1);
   overflow: hidden;
+ 
   @keyframes appear {
       0%{ transform: translateY(-100%) scaleY(0); opacity: 0; }
       100%{ transform: translateY(0) scaleY(1); opacity: 1;}
@@ -140,7 +138,7 @@ section {
     animation: bounce-in-right 1.2s ease-in-out;
       padding: 1rem;
       cursor: pointer;
-      background-color: var(--color-grey-4);
+      background-color: var(--color-primary);
       width: 55px;
       height: 55px;
       border-radius: 50%;
@@ -148,7 +146,8 @@ section {
       justify-content: center;
       align-items: center;
       margin: .7rem 0;
-      box-shadow: var(--box-shadow-1) ;
+      box-shadow:  5px -3px 5px #0c0c0c,
+                  -3px 5px 5px #262626;
       
       i {
           font-size: 1.2rem;
@@ -166,19 +165,20 @@ section {
 }
 
 .theme-btn {
-    animation: bounce-in-right 1.2s ease-in-out;
+  animation: bounce-in-right 1.2s ease-in-out;
   top: 5%;
   right: 3%;
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  background-color: var(--color-grey-4);
+  background-color: var(--color-primary);
   cursor: pointer;
   position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 3px 15px rgba(0,0,0,.3);
+  box-shadow: 6px -6px 15px #0b0b0b,
+  -6px 6px 15px #272727;
   transition: all .1s ease-in-out;
   &:active{ transform: translateY(-3px); }
   i{
@@ -189,52 +189,115 @@ section {
 }
 
 
+
 /*Header-content*/
 .header-content {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  align-content: center;
+ 
+  justify-content: center;
+  margin: 0;
   min-height: 100vh;
+  
   .left-header {
       display: flex;
       align-items: center;
+      justify-content: center;
       position: relative;
-      &:hover{
-        transition: all .5s ease;
-        filter: drop-shadow(16px 16px 30px var(--color-white));
-      }
+      padding: 1px;
+      margin: 2px;
+      width:30vh;
+      height:30vh;
+      top: -230px;
+      left: 260px;
+      // -webkit-border-radius: 40px;
+      // border-radius: 50%;
+      
+      
+      // &:hover{
+      //   transition: all .5s ease;
+      //   filter: drop-shadow(16px 16px 30px var(--color-white));
+       
+      // }
       .h-shape {
           transition: all .4s ease-in-out;
           width: 85%;
           height: 100%;
-          background-color: var(--color-secondary);
+          // background-color: var(--color-secondary);
           position: absolute;
           left: 0;
           top: 0;
           z-index: -1;
-          clip-path: polygon(40% 0, 56% 80%, 39% 40%, 0% 100%);
+          clip-path: polygon(80% 50%, 56% 80%, 39% 40%, 50% 100%);
+          
+
           
       }
       .image {
-          border-radius: 1000000000px;
-          position: absolute;
-          height: 65%;
-          width: 65%;
-          margin-left: 4rem;
+          border-radius: 40px;
+          position: relative;
+          height: 30vh;
+          width: 30vh;
           background-color: var(--color-black);
-          transition: all .5s ease-in-out;
+          transition: all 1s ease-in-out;
           transition: transform 1s;
+          
+          
+          // Roll in animation
+          @-webkit-keyframes roll-in-blurred-left {
+            0% {
+              -webkit-transform: translateX(-1000px) rotate(-720deg);
+                      transform: translateX(-1000px) rotate(-720deg);
+              -webkit-filter: blur(50px);
+                      filter: blur(50px);
+              opacity: 0;
+            }
+            100% {
+              -webkit-transform: translateX(0) rotate(0deg);
+                      transform: translateX(0) rotate(0deg);
+              -webkit-filter: blur(0);
+                      filter: blur(0);
+              opacity: 1;
+            }
+          }
+          @keyframes roll-in-blurred-left {
+            0% {
+              -webkit-transform: translateX(-1000px) rotate(-720deg);
+                      transform: translateX(-1000px) rotate(-720deg);
+              -webkit-filter: blur(50px);
+                      filter: blur(50px);
+              opacity: 0;
+            }
+            100% {
+              -webkit-transform: translateX(0) rotate(0deg);
+                      transform: translateX(0) rotate(0deg);
+              -webkit-filter: blur(0);
+                      filter: blur(0);
+              opacity: 1;
+            }
+          }
+          -webkit-animation: roll-in-blurred-left 1.2s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.7s both;
+	        animation: roll-in-blurred-left 1.2s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.7s both;
+
+          
           img {
-              border-radius: 1000000000px;
+              border-radius: 40px;
+              
+              
               
               width: 100%;
               height: 100%;
               object-fit: cover;
               transition: all .9s ease-in-out;
               // filter: scalia(25%) blur(0.5px);
+              
              
               &:hover{
+                border: 1px solid var(--color-secondary);
                 transition: all .8s ease;
-                filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
+                filter: drop-shadow(-3px -3px 5px var(--color-secondary)) ;
               }
           }
       }
@@ -250,17 +313,39 @@ section {
      }
   }
   .right-header {
+    padding: 0;
       display: flex;
+      width: 110vh;
+      height: 60vh;
       flex-direction: column;
+      align-content: center;
       justify-content: center;
-      padding-right: 18rem;
+      // right: 520px;
+      // left: 400px;
+      padding: 5rem;
+      margin: 7vh;
+      -webkit-border-radius: 50px;
+      border-radius: 70px;
+      background: linear-gradient(45deg, #1b1b1b, #171717);
+      box-shadow:  8px 8px 16px #0c0c0c,
+      -8px -8px 16px #272727;
+      
       .name {
+        text-align: center;
           font-size: 3rem;
           span { color: var(--color-secondary); }
       }
+      .headline {
+        text-align: center;
+          
+
+      }
       p {
-          margin: 1.5rem 0;
-          line-height: 2rem;
+        padding: 20px;
+        text-align: center;
+        font-size: calc(2px + 1rem);
+        margin: 1.5rem 0;
+        line-height: 2rem;
       }
       
   }
@@ -277,15 +362,17 @@ section {
       grid-template-columns: repeat(2, 1fr);
       grid-gap: 2rem;
       .about-item {
-          border: 1px solid var(--color-grey-2);
+          border: 1px solid var(--color-primary);
           border-radius: 25px;
           transition: all .4s ease-in-out;
-          box-shadow: 1px 2px 15px rgba(0,0,0,.1);
+          box-shadow: 10px -10px 20px #0b0b0b,
+          -10px 10px 20px #272727;
           &:hover {
               cursor: default;
               transform: translateY(-5px);
               border: 1px solid var(--color-secondary);
-              box-shadow: 1px 4px 15px rgba(0,0,0,.32);
+              box-shadow: 12px -12px 24px #0c0c0c,
+              -12px 12px 24px #272727;
           }
           .abt-text {
               padding: 1.5rem;
@@ -450,28 +537,48 @@ section {
 .portfolios {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 2rem;
+  gap: 2rem;
+  justify-self: center;
+  justify-content: center;
+ 
+  // grid-gap: 6rem;
   margin-top: 3rem;
+  
+  border: 3px solid var(--color-primary);
+  
+  
+
+  
+  // &:hover {
+  //   width: 50vh;
+  // }
   .portfolio-item {
+      width: 30vh;
+      height: 40vh;
       position: relative;
-      border-radius: 15px;
+      border-radius: 45px;
+      box-shadow: 6px -6px 15px #0b0b0b,
+      -6px 6px 15px #272727;
+      
+      
       img {
-          width: 100%;
-          height: 300px;
+          width: 30vh;
+          height: 40vh;
           object-fit: cover;
-          border-radius: 15px;
+          border-radius: 45px;
       }
       .hover-items {
-          width: 100%;
-          height: 100%;
+        width: 30vh;
+        height: 40vh;
           background-color: var(--color-secondary);
           position: absolute;
           left: 0;
           top: 0;
-          border-radius: 15px;
+          border-radius: 45px;
           display: flex;
           justify-content: center;
           align-items: center;
+          
           flex-direction: column;
           opacity: 0;
           transform: scale(0);
@@ -480,9 +587,23 @@ section {
               font-size: 1.5rem;
               text-align: center;
               justify-content: center;
-              color: var(--color-white);
+              color: var(--color-primary);
               margin-bottom: 1.5rem;
+            &:hover {
+              
+              color: var(--color-primary);
+              text-shadow: 8px 8px 16px #0c0c0c,
+              -8px -8px 16px #272727;
+            }
+            
           }
+          .desc-text
+            {
+              color: (var(--color-primary));
+              text-align: center;
+              padding: 15px;
+              font-weight: 500;
+            }
           .icons {
               display: flex;
               justify-content: center;
@@ -517,6 +638,7 @@ section {
 .portfolio-item:hover .hover-items {
   opacity: 1;
   transform: scale(1);
+   
 }
 
 //Blogs Section
@@ -705,20 +827,27 @@ section {
 .btn-con {
   display: flex;
   align-self: flex-start;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
   padding-bottom: 5px;
 
 }
 
+
 .main-btn {
-  border-radius: 30px;
+  border-radius: 40px;
   color: inherit;
   font-weight: 600;
   position: relative;
-  border: 1px solid var(--color-secondary);
+  border: 1px solid var(--color-primary);
   display: flex;
   align-self: flex-start;
   align-items: center;
+ 
   overflow: hidden;
+  box-shadow:  8px 8px 16px #0c0c0c,
+  -8px -8px 16px #272727;
   .btn-text { padding: 0 2rem; }
   .btn-icon {
       background-color: var(--color-secondary);
@@ -727,6 +856,9 @@ section {
       justify-content: center;
       border-radius: 50%;
       padding: 1rem;
+      &:hover {
+        
+      }
   }
   &::before {
       content: '';
@@ -738,6 +870,7 @@ section {
       z-index: -1;
   }
   &:hover {
+    scale: 1.1;
       transition: all .4s ease-out;
       &::before {
           width: 100%;
@@ -745,14 +878,15 @@ section {
           background-color: var(--color-secondary);
           transform: translateX(0);
           transition: all .8s ease-out;
+          
       }
   }
 
 }
-
 .live-btn {
   left: 10px;
-  border-radius: 30px;
+  margin: 2px;
+  border-radius: 40px;
   color: inherit;
   font-weight: 600;
   position: relative;
@@ -762,6 +896,11 @@ section {
   align-items: center;
   overflow: hidden;
   
+  
+  &:hover {
+    transition: all .8s ease;
+    filter: drop-shadow(1px 2px 5px var(--color-secondary)) ;
+   }
   .btn-icon {
       background-color: var(--color-secondary);
       display: flex;
@@ -769,7 +908,8 @@ section {
       justify-content: center;
       border-radius: 50%;
       padding: 1rem;
-     
+      margin: 1px;
+    
   }
 
 
@@ -792,7 +932,7 @@ section {
           transform: translate(-50%, -50%);
           font-weight: 800;
           font-size: 5.3rem;
-          opacity: 0.2;
+          opacity: 0.01;
       }
   }
 }
